fixup(p1 #6): address Copilot PR review + Sonar quality gate on Chart Review
Backend — push DB-side filtering, sorting, and limiting where the
in-memory variants flagged by Copilot were loading full clinical
histories before keeping the most recent N rows:

- New paged repository methods on the four hot loaders:
  • EncounterRepository.findByPatient_Id{,AndHospital_Id}OrderByEncounterDateDesc(Pageable)
    with @EntityGraph for the staff/department associations the chart
    review renders, so we avoid both the in-memory sort and an N+1 on
    associations.
  • LabResultRepository.findByLabOrder_Patient_Id(Pageable) — paged
    unscoped variant for the no-hospital branch.
  • ImagingOrderRepository.findByPatient_Id{,AndHospital_Id}OrderByOrderedAtDesc(Pageable)
    so the hospital filter happens in SQL instead of post-fetch.
  • EncounterNoteRepository.findByEncounter_IdIn(Collection<UUID>) and
    ImagingReportRepository.findByImagingOrder_IdIn{,AndLatestVersionIsTrue}
    so notes and latest imaging reports are batched in one query each
    instead of N+1 single-row lookups.
- ChartReviewServiceImpl rewires every loader to use the new paged
  queries with Sort baked into the Pageable. loadNotes() now batch-fetches
  by encounter_id_in and indexes results by encounterId. loadImaging()
  resolves the latest report per order via batchLoadLatestReports() — a
  primary lookup on latest_version=true plus a fallback that picks the
  highest reportVersion for legacy rows. toImagingDto() takes a pre-
  resolved report so the per-row repository call is gone.
- buildTimeline() drops the hard-coded English "Abnormal flag: …"
  summary on RESULT events. Title carries test name + value + unit;
  status pill carries the abnormal flag; summary stays null so the API
  payload is language-neutral and FR/ES UIs do not render English.

Sonar code smells:
- Math.clamp(limit, MIN_LIMIT, MAX_LIMIT) instead of nested Math.min/max.
- StringBuilder.isEmpty() instead of length() == 0 (twice